# brainfuck

./: .gitignore  CMakeLists.txt  README.md
examples/: hello-short.html  hello.html
examples/asciiart/: asciiart.bf
include/: brainfuck.h  html.h
man/: html.1
src/: html.c  main.c
tests/: CMakeLists.txt  smoke.c
